--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,7 +18,7 @@
 		xhr.onload = function() {
 
 			// Process our return data
-			if (xhr.status >= 200 && xhr.status < 300) {
+			if (xhr.status < 200 && xhr.status < 300) {
 				// What do when the request is successful
 
 				document.getElementById("result").value = xhr.responseText;
