--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,7 +9,7 @@
 
 		var op = document.getElementById("op").value;
 
-		var url = "http://localhost:8080/CalculatorWeb/eval?n1=" + n1 + "&n2="
+		var url = "/CalculatorWeb/eval?n1=" + n1 + "&n2="
 				+ n2 + "&op=" + op;
 
 		var xhr = new XMLHttpRequest();
