--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,9 +13,9 @@ var result = arr[2]
 
 		var op = document.getElementById("op").value;
 
-		var url = "/eval?n1=" + n1 + "&n2="
+		var url = "http://"+result+"/DEV_CALCULATOR/eval?n1=" + n1 + "&n2="
 				+ n2 + "&op=" + op;
-
+		alert(url);
 		var xhr = new XMLHttpRequest();
 
 		// Setup our listener to process completed requests
