--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,6 +15,9 @@ var result = arr[2]
 
 		var url = "http://"+result+"/CalculatorDev/eval?n1=" + n1 + "&n2="
 				+ n2 + "&op=" + op;
+		
+		var url = "http://"+result+"/QA_Calculator/eval?n1=" + n1 + "&n2="
+				+ n2 + "&op=" + op;
 		//alert(url);
 		var xhr = new XMLHttpRequest();
 
