--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,7 +13,7 @@ var result = arr[2]
 
 		var op = document.getElementById("op").value;
 
-		var url = "http://"+result+"/Calculator_dev/eval?n1=" + n1 + "&n2="
+		var url = "http://"+result+"/QA_CALCULATOR/eval?n1=" + n1 + "&n2="
 				+ n2 + "&op=" + op;
 	
 		//alert(url);
