--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -82,7 +82,7 @@ var result = arr[2]
 			</div>
 			<hr>
 			<div align="center">
-				<button onclick="processRequest()" class="btn btn-info">Calculate</button>
+				<button onclick="processRequest()" id ="Submit" class="btn btn-info">Calculate</button>
 			</div>
 
 		</div>
