--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -48,7 +48,7 @@ var result = arr[2]
 	<div class="jumbotron">
 		<div align="center">
 			<h2>
-				<strong>CALCULATOR_FINALA</strong>
+				<strong>CALCULATOR_FINALB</strong>
 			</h2>
 		</div>
 	</div>
